hphp/test/zend/good/ext/mysqli/tests/015.php.skipif
<?php
	require_once('skipif.inc');
	require_once('skipifconnectfailure.inc');

	require_once('connect.inc');
	if (!$link = my_mysqli_connect($host, $user, $passwd, $db, $port, $socket))
		die(sprintf("Cannot connect, [%d] %s", mysqli_connect_errno(), mysqli_connect_error()));

	if (!have_innodb($link))
		die(sprintf("Needs InnoDB support, [%d] %s", $link->errno, $link->error));
?>